# skills

./: .gitignore  AGENTS.md  CHANGELOG.md  MIGRATION_REPORT.md  README.md  SANDBOX_PR_PITCH.md  package.json  tap.json
.agents/: state.json
.claude-plugin/: plugin.json  (+1 more)
plugins/agentic-research/research-view/crates/cli/: Cargo.toml
plugins/agentic-research/research-view/crates/cli/src/: args.rs  main.rs  render.rs
plugins/agentic-research/research-view/crates/cli/tests/: integration.rs
plugins/agentic-research/research-view/crates/core/: Cargo.toml
plugins/agentic-research/research-view/crates/core/src/: error.rs  filter.rs  index.rs  lib.rs  model.rs  parse.rs
plugins/agile-workflow/work-view/crates/cli/: Cargo.toml
plugins/agile-workflow/work-view/crates/cli/src/: actionable.rs  args.rs  main.rs  render.rs  scope.rs  stale.rs
plugins/agile-workflow/work-view/crates/cli/src/board/: assets.rs  feed.rs  mod.rs  open.rs  server.rs
plugins/agile-workflow/work-view/crates/cli/src/board/assets/: board.css  board.js  card.js  components.css  dependency.js  detail.js  filters.js  index.html  kanban.js  markdown.js  motion.css  state.js  table.js  tokens.css  views.js
plugins/agile-workflow/work-view/crates/cli/tests/: integration.rs
plugins/agile-workflow/work-view/crates/cli/tests/board-js/: dependency-table.test.mjs  expanded-browsing.test.mjs  harness-smoke.test.mjs  harness.mjs  kanban-detail.test.mjs  markdown-filter.test.mjs
plugins/agile-workflow/work-view/crates/cli/tests/fixtures/golden/.work/: CONVENTIONS.md
plugins/agile-workflow/work-view/crates/cli/tests/fixtures/ready-drafting/.work/: CONVENTIONS.md
(+1291 files in other folders)
