[package]
name = "work-view-cli"
version = "0.1.0"
edition = "2021"
description = "CLI adapter for the agile-workflow work-view substrate query tool"
license = "MIT"

[[bin]]
name = "work-view"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
work-view-core = { path = "../core" }

[dev-dependencies]
tempfile = "3"
